Fix spacing for splash navbar

--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -76,6 +76,7 @@
 }
 
 .splash-navbar-space {
+  height: 8rem;
 }
 
 .signin-navbar-space {
